# AFEX

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  gen-vs2017.bat
AFEX/: CMakeLists.txt
AFEX/Include/Engine/: BlockAlloc.h  DebugUI.h  Hash.h  HashInternal.h  HashName.h  Log.h  Settings.h  Types.h  TypesInternal.h  Window.h
AFEX/Include/Engine/Assets/: Asset.h  AssetManager.h  FontAsset.h
AFEX/Include/Engine/Conversions/: MemConversions.h
AFEX/Misc/: afex.natvis
AFEX/Source/Engine/: DebugUI.cpp  Log.cpp  Settings.cpp  Types.cpp  Window.cpp
AFEX/Source/Engine/Assets/: Asset.cpp  AssetManager.cpp  FontAsset.cpp  IBMPlexMono-Medium.ttf.cpp
AFEX/Source/Engine/Conversions/: MemConversions.cpp
Assets/: app-config.json  log-config.txt
Demo/: CMakeLists.txt
Demo/Source/: Main.cpp
